@@ -28,6 +28,7 @@ Fixing bugs and filling some gaps in new features.
 - Keyboard macro backward steps are implemented
 - ~dslide-deck-forward~ no longer no-ops in some circumstances
 - kmacro action properly skips over non-matching directions when both forward and backward elements are present in a slide
+- 🚧 kmacro transcription of =M-RET= and =M-DEL= is now correct.  There are likely more events that don't round trip nicely from ~last-kbd-macro~ through ~key-description~ and back through ~kbd~.  *File issues*.
 * v0.6.0 Fighting Spam 💌
 - There is less markup (especially for babel)
 - Old actions are easier to use
